# sys-sensor-v3

./: .gitignore  README.md  SysSensorV3.sln  build-log.txt  build-log2.txt  build-log3.txt  monitor-service-v2.ps1  monitor-service.ps1  start-advanced-monitor.bat  start-monitor.bat  stop
doc/: api-reference.md  architecture.md  backend-exit-diagnostics-logging.md  connection-behavior-analysis.md  data-models.md  disk-storage-metrics-plan.md  gpu-metrics-plan.md  iStat Menus指标逐项实现检查清单.md  implementation-plan.md  istat-menus-metrics.md  memory-metrics-plan.md  metrics-refresh-optimization.md  metrics-verification.md  network-metrics-plan.md  notes.md  peripheral-battery-plan-2025-08-24.md  power-battery-plan-2025-08-24.md  refactor-rpc-hosted-service.md  security-design.md  security.md  supplementary-notes.md  task.md  test-plan.md  todo-2025-08-20.md  todo-2025-08-21.md  todo-2025-08-22.md  todo-2025-08-23.md  usage.md  wifi-metrics-integration.md  window-system.md  项目现状与指标实现对比报告.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1756201900932-42ec7612c0795.mjs  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: core-event.json
frontend/src-tauri/src/: main.rs
scripts/: advanced-monitor.ps1  auto-restart.ps1  build-portable.ps1  build.ps1  collector-optimization-analysis.md  collector-performance-test.ps1  cpu-monitor.ps1  dev-simple.ps1  dev.ps1  gpu-collector-optimization.cs  install-service.ps1  (+20 more)
(+169 files in other folders)
