[package]
name = "sys-sensor-v3-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Tauri v2
# 注意：首次构建需要安装 Rust 工具链与 tauri-cli
# features 可按需精简
[dependencies.tauri]
version = "2"
features = []

[profile.release]
opt-level = 3

[profile.dev]
incremental = false
